<resources>
    <string name="app_name">Калькулятор</string>
    <string name="error">ошибка</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="number_zero">0</string>
    <string name="symbol_point">.</string>
    <string name="symbol_divide">/</string>
    <string name="symbol_multiply">*</string>
    <string name="symbol_subtract">-</string>
    <string name="symbol_add">+</string>
    <string name="symbol_equal">=</string>
    <string name="symbol_delete">CLR</string>
    <string name="symbol_openbracket">(</string>
    <string name="symbol_closebracket">)</string>
</resources>
